fix and update ui

--- a/eatmate/Info.plist
+++ b/eatmate/Info.plist
@@ -27,5 +27,7 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
 </dict>
 </plist>
